// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary correctly for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    8
     
    expenses
     totalling 
    $490.33
     
  </h1>
</div>
`;

exports[`Should render ExpensesSummary correctly for one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $33.33
     
  </h1>
</div>
`;
